[package]
name = "lau-git-world"
version = "0.1.0"
edition = "2021"
description = "Git-native world system for the Lau platform — kids' game worlds ARE git repos"
license = "MIT"

[dependencies]
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
